#4701 - Fixes task board scrollbar problems in Firefox
* Moves overflow-y property off the table cell and onto the
  .ticket-wrap node
* Also removes padding from the parent div and places this onto
  .ticket-wrap node so the page different DOM layout does not
  affect the layout
* Tested in Chrome 37 and Firefox 31

git-svn-id: file:///mnt/ramdisk/d4-svn/trunk@24548 484df14f-75d2-4b3f-8ba0-490e05069a01

--- a/agiletools/htdocs/css/taskboard.css
+++ b/agiletools/htdocs/css/taskboard.css
@@ -268,7 +268,12 @@ body.fullscreen #taskboard-controls {
 }
 
 #taskboard .tickets.ui-droppable {
+  padding: 0;
+}
+
+.tickets-wrap {
   overflow-y: auto;
+  padding: 10px;
 }
 
 @media (min-height:400px) and (max-height: 680px) {
